// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ember-octane-migration-status-task detects octane migration status for non-octane addon and outputs to json 1`] = `
Array [
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/components/my-component.js",
          },
          "region": Object {
            "startColumn": 24,
            "startLine": 6,
          },
        },
      },
    ],
    "message": Object {
      "text": "Native JS classes should be used instead of classic classes",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "ember/no-classic-classes",
      "resultGroup": "Native Classes",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/components/other-component.js",
          },
          "region": Object {
            "startColumn": 24,
            "startLine": 6,
          },
        },
      },
    ],
    "message": Object {
      "text": "Native JS classes should be used instead of classic classes",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "ember/no-classic-classes",
      "resultGroup": "Native Classes",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/routes/my-route.js",
          },
          "region": Object {
            "startColumn": 24,
            "startLine": 4,
          },
        },
      },
    ],
    "message": Object {
      "text": "Native JS classes should be used instead of classic classes",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "ember/no-classic-classes",
      "resultGroup": "Native Classes",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/services/my-service.js",
          },
          "region": Object {
            "startColumn": 24,
            "startLine": 4,
          },
        },
      },
    ],
    "message": Object {
      "text": "Native JS classes should be used instead of classic classes",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "ember/no-classic-classes",
      "resultGroup": "Native Classes",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/components/my-component.js",
          },
          "region": Object {
            "startColumn": 24,
            "startLine": 10,
          },
        },
      },
    ],
    "message": Object {
      "text": "Use ES5 getters (\`this.property\`) instead of Ember's \`get\` function",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "ember/no-get",
      "resultGroup": "Native Classes",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/components/other-component.js",
          },
          "region": Object {
            "startColumn": 24,
            "startLine": 10,
          },
        },
      },
    ],
    "message": Object {
      "text": "Use ES5 getters (\`this.property\`) instead of Ember's \`get\` function",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "ember/no-get",
      "resultGroup": "Native Classes",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/services/my-service.js",
          },
          "region": Object {
            "startColumn": 25,
            "startLine": 8,
          },
        },
      },
    ],
    "message": Object {
      "text": "Use ES5 getters (\`this.property\`) instead of Ember's \`get\` function",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "ember/no-get",
      "resultGroup": "Native Classes",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/components/my-component.js",
          },
          "region": Object {
            "startColumn": 11,
            "startLine": 15,
          },
        },
      },
    ],
    "message": Object {
      "text": "Use the @action decorator instead of declaring an actions hash",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "ember/no-actions-hash",
      "resultGroup": "Native Classes",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/components/other-component.js",
          },
          "region": Object {
            "startColumn": 11,
            "startLine": 15,
          },
        },
      },
    ],
    "message": Object {
      "text": "Use the @action decorator instead of declaring an actions hash",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "ember/no-actions-hash",
      "resultGroup": "Native Classes",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/components/my-component.js",
          },
          "region": Object {
            "startColumn": 24,
            "startLine": 6,
          },
        },
      },
    ],
    "message": Object {
      "text": "Please switch to a tagless component by setting \`tagName: ''\` or converting to a Glimmer component",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "ember/require-tagless-components",
      "resultGroup": "Tagless Components",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/components/other-component.js",
          },
          "region": Object {
            "startColumn": 24,
            "startLine": 6,
          },
        },
      },
    ],
    "message": Object {
      "text": "Please switch to a tagless component by setting \`tagName: ''\` or converting to a Glimmer component",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "ember/require-tagless-components",
      "resultGroup": "Tagless Components",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/components/my-component.js",
          },
          "region": Object {
            "startColumn": 16,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Use Glimmer components(@glimmer/component) instead of classic components(@ember/component)",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "ember/no-classic-components",
      "resultGroup": "Glimmer Components",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/components/other-component.js",
          },
          "region": Object {
            "startColumn": 16,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Use Glimmer components(@glimmer/component) instead of classic components(@ember/component)",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "ember/no-classic-components",
      "resultGroup": "Glimmer Components",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/templates/application.hbs",
          },
          "region": Object {
            "startColumn": 10,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "You are using the component {{my-component}} with curly component syntax. You should use <MyComponent> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['my-component'] }\`.",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "no-curly-component-invocation",
      "resultGroup": "Angle Brackets Syntax",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/templates/application.hbs",
          },
          "region": Object {
            "startColumn": 10,
            "startLine": 3,
          },
        },
      },
    ],
    "message": Object {
      "text": "You are using the component {{other-component}} with curly component syntax. You should use <OtherComponent> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['other-component'] }\`.",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "no-curly-component-invocation",
      "resultGroup": "Angle Brackets Syntax",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/templates/my-component.hbs",
          },
          "region": Object {
            "startColumn": 10,
            "startLine": 3,
          },
        },
      },
    ],
    "message": Object {
      "text": "You are using the component {{someProp}} with curly component syntax. You should use <SomeProp> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['someProp'] }\`.",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "no-curly-component-invocation",
      "resultGroup": "Angle Brackets Syntax",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/templates/other-component.hbs",
          },
          "region": Object {
            "startColumn": 10,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "You are using the component {{someProp}} with curly component syntax. You should use <SomeProp> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['someProp'] }\`.",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "no-curly-component-invocation",
      "resultGroup": "Angle Brackets Syntax",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/templates/application.hbs",
          },
          "region": Object {
            "startColumn": 33,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Ambiguous path 'foo' is not allowed. Use '@foo' if it is a named argument or 'this.foo' if it is a property on 'this'. If it is a helper or component that has no arguments, you must either convert it to an angle bracket invocation or manually add it to the 'no-implicit-this' rule configuration, e.g. 'no-implicit-this': { allow: ['foo'] }.",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "no-implicit-this",
      "resultGroup": "Own Properties",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/templates/application.hbs",
          },
          "region": Object {
            "startColumn": 39,
            "startLine": 3,
          },
        },
      },
    ],
    "message": Object {
      "text": "Ambiguous path 'bar' is not allowed. Use '@bar' if it is a named argument or 'this.bar' if it is a property on 'this'. If it is a helper or component that has no arguments, you must either convert it to an angle bracket invocation or manually add it to the 'no-implicit-this' rule configuration, e.g. 'no-implicit-this': { allow: ['bar'] }.",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "no-implicit-this",
      "resultGroup": "Own Properties",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/templates/my-component.hbs",
          },
          "region": Object {
            "startColumn": 12,
            "startLine": 3,
          },
        },
      },
    ],
    "message": Object {
      "text": "Ambiguous path 'someProp' is not allowed. Use '@someProp' if it is a named argument or 'this.someProp' if it is a property on 'this'. If it is a helper or component that has no arguments, you must either convert it to an angle bracket invocation or manually add it to the 'no-implicit-this' rule configuration, e.g. 'no-implicit-this': { allow: ['someProp'] }.",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "no-implicit-this",
      "resultGroup": "Own Properties",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/templates/other-component.hbs",
          },
          "region": Object {
            "startColumn": 12,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Ambiguous path 'someProp' is not allowed. Use '@someProp' if it is a named argument or 'this.someProp' if it is a property on 'this'. If it is a helper or component that has no arguments, you must either convert it to an angle bracket invocation or manually add it to the 'no-implicit-this' rule configuration, e.g. 'no-implicit-this': { allow: ['someProp'] }.",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "no-implicit-this",
      "resultGroup": "Own Properties",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "addon/templates/my-component.hbs",
          },
          "region": Object {
            "startColumn": 18,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Do not use \`action\` as <button {{action ...}} />. Instead, use the \`on\` modifier and \`fn\` helper.",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "no-action",
      "resultGroup": "Modifiers",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
]
`;

exports[`ember-octane-migration-status-task detects octane migration status for non-octane app and outputs to json 1`] = `
Array [
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/components/my-component.js",
          },
          "region": Object {
            "startColumn": 24,
            "startLine": 6,
          },
        },
      },
    ],
    "message": Object {
      "text": "Native JS classes should be used instead of classic classes",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "ember/no-classic-classes",
      "resultGroup": "Native Classes",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/components/other-component.js",
          },
          "region": Object {
            "startColumn": 24,
            "startLine": 6,
          },
        },
      },
    ],
    "message": Object {
      "text": "Native JS classes should be used instead of classic classes",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "ember/no-classic-classes",
      "resultGroup": "Native Classes",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/routes/my-route.js",
          },
          "region": Object {
            "startColumn": 24,
            "startLine": 4,
          },
        },
      },
    ],
    "message": Object {
      "text": "Native JS classes should be used instead of classic classes",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "ember/no-classic-classes",
      "resultGroup": "Native Classes",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/services/my-service.js",
          },
          "region": Object {
            "startColumn": 24,
            "startLine": 4,
          },
        },
      },
    ],
    "message": Object {
      "text": "Native JS classes should be used instead of classic classes",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "ember/no-classic-classes",
      "resultGroup": "Native Classes",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/components/my-component.js",
          },
          "region": Object {
            "startColumn": 24,
            "startLine": 10,
          },
        },
      },
    ],
    "message": Object {
      "text": "Use ES5 getters (\`this.property\`) instead of Ember's \`get\` function",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "ember/no-get",
      "resultGroup": "Native Classes",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/components/other-component.js",
          },
          "region": Object {
            "startColumn": 24,
            "startLine": 10,
          },
        },
      },
    ],
    "message": Object {
      "text": "Use ES5 getters (\`this.property\`) instead of Ember's \`get\` function",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "ember/no-get",
      "resultGroup": "Native Classes",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/services/my-service.js",
          },
          "region": Object {
            "startColumn": 25,
            "startLine": 8,
          },
        },
      },
    ],
    "message": Object {
      "text": "Use ES5 getters (\`this.property\`) instead of Ember's \`get\` function",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "ember/no-get",
      "resultGroup": "Native Classes",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/components/my-component.js",
          },
          "region": Object {
            "startColumn": 11,
            "startLine": 15,
          },
        },
      },
    ],
    "message": Object {
      "text": "Use the @action decorator instead of declaring an actions hash",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "ember/no-actions-hash",
      "resultGroup": "Native Classes",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/components/other-component.js",
          },
          "region": Object {
            "startColumn": 11,
            "startLine": 15,
          },
        },
      },
    ],
    "message": Object {
      "text": "Use the @action decorator instead of declaring an actions hash",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "ember/no-actions-hash",
      "resultGroup": "Native Classes",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/components/my-component.js",
          },
          "region": Object {
            "startColumn": 24,
            "startLine": 6,
          },
        },
      },
    ],
    "message": Object {
      "text": "Please switch to a tagless component by setting \`tagName: ''\` or converting to a Glimmer component",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "ember/require-tagless-components",
      "resultGroup": "Tagless Components",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/components/other-component.js",
          },
          "region": Object {
            "startColumn": 24,
            "startLine": 6,
          },
        },
      },
    ],
    "message": Object {
      "text": "Please switch to a tagless component by setting \`tagName: ''\` or converting to a Glimmer component",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "ember/require-tagless-components",
      "resultGroup": "Tagless Components",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/components/my-component.js",
          },
          "region": Object {
            "startColumn": 16,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Use Glimmer components(@glimmer/component) instead of classic components(@ember/component)",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "ember/no-classic-components",
      "resultGroup": "Glimmer Components",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/components/other-component.js",
          },
          "region": Object {
            "startColumn": 16,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Use Glimmer components(@glimmer/component) instead of classic components(@ember/component)",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "ember/no-classic-components",
      "resultGroup": "Glimmer Components",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/templates/application.hbs",
          },
          "region": Object {
            "startColumn": 10,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "You are using the component {{my-component}} with curly component syntax. You should use <MyComponent> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['my-component'] }\`.",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "no-curly-component-invocation",
      "resultGroup": "Angle Brackets Syntax",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/templates/application.hbs",
          },
          "region": Object {
            "startColumn": 10,
            "startLine": 3,
          },
        },
      },
    ],
    "message": Object {
      "text": "You are using the component {{other-component}} with curly component syntax. You should use <OtherComponent> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['other-component'] }\`.",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "no-curly-component-invocation",
      "resultGroup": "Angle Brackets Syntax",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/templates/my-component.hbs",
          },
          "region": Object {
            "startColumn": 10,
            "startLine": 3,
          },
        },
      },
    ],
    "message": Object {
      "text": "You are using the component {{someProp}} with curly component syntax. You should use <SomeProp> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['someProp'] }\`.",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "no-curly-component-invocation",
      "resultGroup": "Angle Brackets Syntax",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/templates/other-component.hbs",
          },
          "region": Object {
            "startColumn": 10,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "You are using the component {{someProp}} with curly component syntax. You should use <SomeProp> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['someProp'] }\`.",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "no-curly-component-invocation",
      "resultGroup": "Angle Brackets Syntax",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/templates/application.hbs",
          },
          "region": Object {
            "startColumn": 33,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Ambiguous path 'foo' is not allowed. Use '@foo' if it is a named argument or 'this.foo' if it is a property on 'this'. If it is a helper or component that has no arguments, you must either convert it to an angle bracket invocation or manually add it to the 'no-implicit-this' rule configuration, e.g. 'no-implicit-this': { allow: ['foo'] }.",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "no-implicit-this",
      "resultGroup": "Own Properties",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/templates/application.hbs",
          },
          "region": Object {
            "startColumn": 39,
            "startLine": 3,
          },
        },
      },
    ],
    "message": Object {
      "text": "Ambiguous path 'bar' is not allowed. Use '@bar' if it is a named argument or 'this.bar' if it is a property on 'this'. If it is a helper or component that has no arguments, you must either convert it to an angle bracket invocation or manually add it to the 'no-implicit-this' rule configuration, e.g. 'no-implicit-this': { allow: ['bar'] }.",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "no-implicit-this",
      "resultGroup": "Own Properties",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/templates/my-component.hbs",
          },
          "region": Object {
            "startColumn": 12,
            "startLine": 3,
          },
        },
      },
    ],
    "message": Object {
      "text": "Ambiguous path 'someProp' is not allowed. Use '@someProp' if it is a named argument or 'this.someProp' if it is a property on 'this'. If it is a helper or component that has no arguments, you must either convert it to an angle bracket invocation or manually add it to the 'no-implicit-this' rule configuration, e.g. 'no-implicit-this': { allow: ['someProp'] }.",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "no-implicit-this",
      "resultGroup": "Own Properties",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/templates/other-component.hbs",
          },
          "region": Object {
            "startColumn": 12,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Ambiguous path 'someProp' is not allowed. Use '@someProp' if it is a named argument or 'this.someProp' if it is a property on 'this'. If it is a helper or component that has no arguments, you must either convert it to an angle bracket invocation or manually add it to the 'no-implicit-this' rule configuration, e.g. 'no-implicit-this': { allow: ['someProp'] }.",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "no-implicit-this",
      "resultGroup": "Own Properties",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
  Object {
    "locations": Array [
      Object {
        "physicalLocation": Object {
          "artifactLocation": Object {
            "uri": "app/templates/my-component.hbs",
          },
          "region": Object {
            "startColumn": 18,
            "startLine": 2,
          },
        },
      },
    ],
    "message": Object {
      "text": "Do not use \`action\` as <button {{action ...}} />. Instead, use the \`on\` modifier and \`fn\` helper.",
    },
    "occurrenceCount": 1,
    "properties": Object {
      "category": "migrations",
      "group": "ember",
      "lintRuleId": "no-action",
      "resultGroup": "Modifiers",
      "taskDisplayName": "Ember Octane Migration Status",
    },
    "ruleId": "ember-octane-migration-status",
  },
]
`;

exports[`ember-octane-migration-status-task detects octane migration status for octane addon and outputs to json 1`] = `Array []`;

exports[`ember-octane-migration-status-task detects octane migration status for octane app and outputs to json 1`] = `Array []`;
